Adding GoogleMaps Api

--- a/twist/index.html
+++ b/twist/index.html
@@ -482,6 +482,8 @@
 		</div>
 	</section>
 
+	<div id="map" class="fh5co-map"></div>
+
 	<div class="getting-started getting-started-1">
 		<div class="getting-grid">
 			<div class="desc" style="padding-right: 0px">
@@ -496,9 +498,6 @@
 			</div>
 		</a>
 	</div>
-
-	
-	<!-- <div id="map" class="fh5co-map"></div> -->
 	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
@@ -515,7 +514,8 @@
 	<!-- Counters -->
 	<script src="js/jquery.countTo.js"></script>
 	<!-- Google Map -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=true"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8nYkuUVEBx-5ht9D7tv-f1wSKebjJ3Rw"></script>
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHczEZlvwedlyaO7xHGzyWBavUXGXEqps&sensor=false" type="text/javascript"></script>  -->
 	<script src="js/google_map.js"></script>
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
