Adding new Default Background

--- a/twist/index.html
+++ b/twist/index.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Aliança&mdash; AAliança Gama</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FreeHTML5.co" />
+	<meta name="description" content="AAliança Gama" />
+	<meta name="keywords" content="Cultos aos domingos 19h" />
+	<meta name="author" content="AAliança" />
 
 
   	<!-- Facebook and Twitter integration -->
@@ -66,7 +66,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li class="active"><a href="#" data-nav-section="home"><span>Inicial</span></a></li>
 						<li><a href="#" data-nav-section="services"><span>Valores</span></a></li>
-						<li><a href="#" data-nav-section="explore"><span>Pregações</span></a></li>
+						<li><a href="#" data-nav-section="explore"><span>Mensagens</span></a></li>
 						<li><a href="#" data-nav-section="blog"><span>Visão</span></a></li>
 						<li><a href="#" data-nav-section="faq"><span>FAQ</span></a></li>
 						<!-- <li class="call-to-action"><a class="sign-up" href="#"><span>Sign Up</span></a></li>
@@ -77,9 +77,11 @@
 	  </div>
 	</header>
 
-	<section id="fh5co-home" data-section="home" style="background-image: url(images/correção.jpg);" data-stellar-background-ratio="0.5">
-		<!-- <div class="gradient"></div>
-		<div class="container">
+
+	<br><br>
+	<section id="fh5co-home" data-section="home" style="background-image: url(images/pesevangelho.png);" data-stellar-background-ratio="0.5">
+		<!-- <div class="gradient"></div> -->
+		<!-- <div class="container">
 			<div class="text-wrap">
 				<div class="text-inner">
 					<div class="row">
@@ -169,7 +171,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center">
-					<h2 class="to-animate"><span>Pregações</span></h2>
+					<h2 class="to-animate"><span>Mensagens</span></h2>
 					<!-- <div class="row"> -->
 						<!-- <div class="col-md-8 col-md-offset-2 subtext to-animate"> -->
 							<!-- <h3>Acompanhe no Youtube as pregações passadas. Os cultos acontecem todo domingo às 19h</h3> -->
@@ -425,7 +427,7 @@
 						<div class="box-faq to-animate-2">
 							<i class="icon-check2"></i>
 							<div class="desc">
-								<h3>Então há atividades infantis?</h3>
+								<h3>Há atividades infantis?</h3>
 								<p style="text-align: justify">Sim. Há um programa bem estruturado que acontece todos os domingo para as crianças até 14 anos. Esse programa ocorre em paralelo com o momento da Reflexão nas Escrituras - e conta com uma equipe organizada e capacitada para oferecer conhecimento em um ambiente agradável e seguro.</p>
 							</div>
 						</div>
@@ -471,7 +473,7 @@
 						<div class="box-faq to-animate-2">
 							<i class="icon-check2"></i>
 							<div class="desc">
-								<h3> Porque há apenas cultos no domingo à noite?</h3>
+								<h3> Por que há apenas cultos no domingo à noite?</h3>
 								<p style="text-align: justify">Temos Encontros durante a semana em diversos lugares, que denominamos de Redes Sociais Reais, para que os participantes se sintam em um ambiente social de interações mais familiares, onde possam ajudar e serem ajudados de forma mais profunda.
 									Temos também treinamentos regulares aos domingos pela manhã, que chamamos de Escola Bíblica de Treinamento para aqueles que desejam se aprofundar no conhecimento das Escrituras para melhor exercerem seus dons.  Neste trabalho temos um currículo com diversos módulos em forma de carrossel e outros eletivos.</p>
 							</div>
