--- a/twist/index.html
+++ b/twist/index.html
@@ -79,7 +79,8 @@
 
 
 	<br><br>
-	<section id="fh5co-home" data-section="home" style="background-image: url(images/pesevangelho.png);" data-stellar-background-ratio="0.5">
+	<section id="fh5co-home" data-section="home" data-stellar-background-ratio="0.5">
+		<img src="./images/pesevangelho.png" alt="" style="width: 100%">
 		<!-- <div class="gradient"></div> -->
 		<!-- <div class="container">
 			<div class="text-wrap">
@@ -486,11 +487,11 @@
 
 	<div id="map" class="fh5co-map"></div>
 
-	<div class="getting-started getting-started-1">
+	<!-- <div class="getting-started getting-started-1">
 		<div class="getting-grid">
 			<div class="desc" style="padding-right: 0px">
-				<!-- <h2>Getting <span>Started</span></h2>
-				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p> -->
+				<h2>Getting <span>Started</span></h2>
+				<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
 				<iframe width="660" height="350" src="https://www.youtube.com/embed/a2QBAS3DnGg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 			</div>
 		</div>
@@ -499,7 +500,18 @@
 				<img src="images/favicon.png" alt="" style="width: 450px">
 			</div>
 		</a>
-	</div>
+	</div> -->
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-126180956-1"></script>
+	<script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+  		gtag('js', new Date());
+
+  		gtag('config', 'UA-126180956-1');
+	</script>
+
 	
 	<!-- jQuery -->
 	<script src="js/jquery.min.js"></script>
